# Axum-web

./: .env  Cargo.toml  readme.md
migrations/: 20241026125132_create_tickets_tables.down.sql  20241026125132_create_tickets_tables.up.sql
src/: error.rs  main.rs  pool.rs  response.rs
src/handler/: mod.rs  root_handle.rs
src/logger/: logger.rs
src/logs/: axum-log.2024-10-26
