[package]
name = "Axum-web"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7.7" }
axum-extra = { version = "0.9.4" }
tower = { version = "0.5.1", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["full"] }
serde_json = "1.0.107"
askama = "0.12"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
matchit = "0.8.4"
rand = "0.8.5"
http = "1.0.0"
hyper = "1.5.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
time = { version = "0.3.36", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.65"
